[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Sawyer Czupka <sawyerczupka@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
gym = "0.24.1"
pygame = "^2.5.2"
matplotlib = "3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
